Backend running end to end with pending TODOs

--- a/Project.toml
+++ b/Project.toml
@@ -14,6 +14,9 @@ DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 Genie = "c43c736e-a2d1-11e8-161f-af95117fbd1e"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
+JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 ModelSelection = "51b78214-913b-40cf-9250-c64eb33811f7"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
+Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
+SwagUI = "bf05d729-34b2-4f1f-a2f1-2452bece7ebc"
 UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
