--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -9,13 +9,13 @@ on:
       - main
 
 jobs:
-  build-test:
+  test:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         julia-version:
           - '1.6.7'
-          - '1.9'
+          - 'nightly'
         julia-arch:
           - x64
         os: 
@@ -26,5 +26,6 @@ jobs:
         with:
           version: ${{ matrix.julia-version }}
           arch: ${{ matrix.julia-arch }}
+      - uses: julia-actions/cache@v1
       - uses: julia-actions/julia-buildpkg@v1
       - uses: julia-actions/julia-runtest@v1
