--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -4,9 +4,15 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'src/**'
+      - 'Project.toml'
   pull_request:
     branches:
       - main
+    paths:
+      - 'src/**'
+      - 'Project.toml'
 
 jobs:
   build:
