--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -4,7 +4,17 @@ on:
   push:
     branches:
       - main
-    tags: '*'
+    paths:
+      - 'src/**'
+      - 'docs/**'
+      - 'Project.toml'
+  pull_request:
+    branches:
+      - main
+    paths:
+      - 'src/**'
+      - 'docs/**'
+      - 'Project.toml'
 
 jobs:
   docs:
