--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,5 @@
+SERVER_HOST=127.0.0.1
 SERVER_PORT=8000
-CLIENT_PORT=8001
-OPEN_BROWSER=false
+SSL_ENABLED = false
+OPEN_DOCUMENTATION=false
 OPEN_CLIENT=false
