--- a/.gitignore
+++ b/.gitignore
@@ -28,27 +28,8 @@ Manifest.toml
 !.env.variables
 *.csv
 *.json
+!frontend/*.json
 !docs/swagger/*.json
-
-#---for vue--
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
-node_modules
-.DS_Store
-dist
-dist-ssr
-coverage
-*.local
-
-/cypress/videos/
-/cypress/screenshots/
 
 # Editor directories and files
 .vscode/*
