Fixing frontend deployment

--- a/.github/workflows/build-frontend.yaml
+++ b/.github/workflows/build-frontend.yaml
@@ -19,8 +19,12 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm i
-    - run: npm run build
+    - run: |
+        cd frontend
+        npm ci
+    - run: |
+        cd frontend
+        npm run build
     - name: Move dist files to public
       run: |
         rm public/* -rf
