--- a/.github/workflows/build-frontend.yaml
+++ b/.github/workflows/build-frontend.yaml
@@ -21,15 +21,5 @@ jobs:
         cache: 'npm'
     - run: |
         cd frontend
+        pwd 
         npm ci
-    - run: |
-        cd frontend
-        npm run build
-    - name: Move dist files to public
-      run: |
-        rm public/* -rf
-        mv frontend/dist/* public
-    - name: Commit & Push changes
-      uses: actions-js/push@master
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
